fixed copyright symbol alignment

--- a/style.css
+++ b/style.css
@@ -69,3 +69,8 @@ footer {
     justify-content: center;
     gap: 10px;
 }
+
+span {
+    display: flex;
+    align-items: center;
+}
